--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 10em;
+    background-size: 100%;
+    height: 100%;
   
 }
 
@@ -49,3 +51,4 @@
     left: 85%;
     transition: 1s;
 }
+
