--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -4,7 +4,7 @@
 
     justify-content: center;
     align-items: center;
-    margin-top: 13%;
+    margin-top: 10%;
     background-size: 100%;
 
   
@@ -71,4 +71,10 @@ width: 100%;
 
    justify-content: center;
     width: 20%;
+}
+
+body {
+
+    background: url('/img/login/background.gif');
+
 }
