--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -60,17 +60,17 @@ width: 100%;
 }
 
 .containerAlert {
-
+    transition: 0.5s;
     display: flex;
     justify-content: center;
     margin-top: 1em;
-  
+    margin-left: 5%;
 }   
 
 .containerAlert2 {
 
    justify-content: center;
-    width: 20%;
+    width: auto;
 }
 
 body {
