--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -214,6 +214,45 @@
 
 }
 
+.interactionStyle5Explosion2 {
+
+    position: absolute;
+    width: auto;
+    min-width: 0px;
+    max-width: 0px;
+    top: 20em;
+    bottom: auto;
+    left:35%;
+
+
+}
+
+.interactionStyle5Explosion3 {
+
+    position: absolute;
+    width: auto;
+    min-width: 0px;
+    max-width: 0px;
+    top: 30em;
+    bottom: auto;
+    left:45%;
+
+
+}
+
+.interactionStyle5Explosion4 {
+
+    position: absolute;
+    width: auto;
+    min-width: 0px;
+    max-width: 0px;
+    top: 25em;
+    bottom: auto;
+    left:55%;
+
+
+}
+
 
 
 
