--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -12,6 +12,7 @@
     left: 30%;
     cursor: pointer;
     transition: 1s;
+    z-index: 1;
 }
 
 
@@ -57,6 +58,7 @@
     left: 90%;
     cursor: pointer;
     transition: 1s;
+    z-index: 1;
 }
 
 
@@ -103,6 +105,7 @@
     left: 15%;
     cursor: pointer;
     transition: 1s;
+    z-index: 1;
 }
 
 .questionStyle3:hover {
@@ -143,6 +146,7 @@
     left: 50%;
     cursor: pointer;
     transition: 1s;
+    z-index: 1;
 }
 
 .questionStyle4:hover {
@@ -253,6 +257,21 @@
 
 }
 
+.questionStyle6 {
+
+    visibility: hidden;
+    position: absolute;
+    width: auto;
+    min-width: 70px;
+    max-width: 70px;
+    top: 20em;
+    bottom: auto;
+    left: 40%;
+    cursor: pointer;
+
+
+}
+
 
 
 
@@ -273,5 +292,5 @@ body {
     background-image: url('/img/dashboard/universe.png');
     background-size: 100%;
     height: 100%;
-     
+     overflow-x: hidden;
 }
