--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -269,7 +269,7 @@
     width: auto;
     min-width: 70px;
     max-width: 70px;
-    top: 20em;
+    top: 20%;
     bottom: auto;
     left: 40%;
     cursor: pointer;
@@ -282,9 +282,7 @@
 
 .containerDashboardStyle {
 
-    height: auto;
-    min-height: 50%;
-    max-height: 50%;
+
 
 
 }
@@ -295,7 +293,11 @@
 body {
 
     background-image: url('/img/dashboard/universe.png');
-    background-size: 100%;
-    height: 100%;
-     overflow-x: hidden;
+    background-repeat: no-repeat !important;
+    background-size: 2000px !important;
+    background-position-x: center !important;
+    background-position-y: -3em !important;
+    width: 100% !important;
+    height: 100% !important;
+    overflow-x: hidden;
 }
