--- a/resources/css/logo.css
+++ b/resources/css/logo.css
@@ -1,109 +1,129 @@
 .logoStyle {
 
-border: 1px solid transparent;
-box-shadow: 2px 2px 2px rgb(101, 175, 255);
-background-color: white;
-border-radius: 40px;
-padding: 0;
-    width: auto;
-    min-width: 35px;
-    max-width: 35px;
-    height: auto;
-    position: relative;
-    right: 70px;
+    border: 1px solid transparent;
+    box-shadow: 2px 2px 2px rgb(101, 175, 255);
+    background-color: white;
+    border-radius: 40px;
+    padding: 0;
+        width: auto;
+        min-width: 35px;
+        max-width: 35px;
+        height: auto;
+        position: relative;
+        right: 70px;
+        
     
-
-}
-
-.navStyle {
-
-    border-bottom: 3px solid rgb(177, 214, 244);
-    background-color: transparent;
-}
-
-.logoNameStyle {
-    font-size: 0%;
-    font-weight: 900 !important;
-    color: rgb(177, 214, 244);
-    transition: 0.5s;
+    }
+    
+    .navStyle {
+    
+        border-bottom: 3px solid rgb(177, 214, 244);
+        background-color: transparent;
+    }
+    
+    .logoNameStyle {
+        font-size: 0%;
+        font-weight: 900 !important;
+        color: rgb(177, 214, 244);
+        transition: 0.5s;
+    }
+    
+    .logoNameStyle:hover {
+    
+        margin-left: 1em !important;
+    
+    
+    }
+    
+    .logoAnimation:hover > .logoNameStyle {
+        margin-left: 1em !important;
+    
+    }
+    
+    
+    .listMenuStyle {
+    
+        background-color: transparent;
+      
+    }
+    
+    .anchorStyle:visited, .anchorStyle:focus, .anchorStyle:hover, .anchorStyle:active{
+    
+        color: rgb(177, 214, 244) !important;
+        opacity: 1;
  
-}
-
-.logoNameStyle:hover {
-
-    margin-left: 1em !important;
-
-
-}
-
-.logoAnimation:hover > .logoNameStyle {
-    margin-left: 1em !important;
-
-}
-
-
-.listMenuStyle {
-
-    background-color: transparent;
-  
-}
-
-.anchorStyle:visited, .anchorStyle:focus, .anchorStyle:hover, .anchorStyle:active{
-
-    color: rgb(177, 214, 244) !important;
-    opacity: 1;
-
-}
-
-.anchorStyleLogin:visited, .anchorStyleLogin:focus, .anchorStyleLogin:hover, .anchorStyleLogin:active{
-
-    color: rgb(177, 214, 244) !important;
-    opacity: 1;
-
-}
-
-.linkStyleHeader:hover {
-    color: rgb(177, 214, 244) !important;
-    opacity: 1;
-    font-weight: 900;
+    }
     
+    .anchorStyleLogin:visited, .anchorStyleLogin:focus, .anchorStyleLogin:hover, .anchorStyleLogin:active{
+    
+        color: rgb(177, 214, 244) !important;
+        opacity: 1;
+    
+    }
+    
+    .linkStyleHeader:hover {
+        color: rgb(177, 214, 244) !important;
+        opacity: 1;
+        font-weight: 900;
+        
+    
+    
+    }
+    
+    
+    
+    .anchorStyle {
+        margin-top: 30px !important;
+        color: rgb(177, 214, 244);
+        background-color: transparent;
+        border-left: 1px solid rgb(177, 214, 244);
+        border-bottom: 1px solid rgb(177, 214, 244);
+        border-radius: 0px;
 
+        width: 250px !important;
+ 
+
+   
+}
+
+@media (max-width: 600px) {
+
+    .anchorStyle {
+        width: 100% !important;
+
+
+    }
 
 }
 
 
+.containerDropdown {
 
-.anchorStyle {
-    margin-top: 30px !important;
-    color: rgb(177, 214, 244);
-    background-color: transparent;
-    border-left: 1px solid rgb(177, 214, 244);
-    border-bottom: 1px solid rgb(177, 214, 244);
-    border-radius: 0px;
-}
-
-.anchorStyleDropDown {
-    border: 2px solid transparent;
-    padding: 4px 7px 4px 7px;
-    border-radius: 40px;
-    color: rgb(177, 214, 244);
-    transition: 0.3s;
-}
-
-.anchorStyleDropDown:hover, .anchorStyleDropDown:active, .anchorStyleDropDown:focus {
-    color: rgb(177, 214, 244);
-    border: 2px solid rgb(177, 214, 244);
-    padding: 4px 7px 4px 7px;
-    border-radius: 40px;
-    background-color: transparent;
-    font-weight: 900;
+    width: 100%;
 
 }
+    
+    
+    .anchorStyleDropDown {
+   
+        color: rgb(177, 214, 244);
+        transition: 0.3s;
 
+    }
+    
+    .anchorStyleDropDown:hover, .anchorStyleDropDown:active, .anchorStyleDropDown:focus {
+        color: rgb(177, 214, 244);
+   
+        background-color: transparent;
+        font-weight: 900;
+    
+    }
+    
+    
+    .dropdownActiveStyle {
+    
+        background-color: transparent !important;
 
-.dropdownActiveStyle {
+    }
 
-    background-color: transparent !important;
-
-}
 
