--- a/resources/css/logo.css
+++ b/resources/css/logo.css
@@ -81,8 +81,8 @@
         border-radius: 0px;
 
         width: 250px !important;
- 
-
+    
+          
    
 }
 
@@ -108,7 +108,8 @@
    
         color: rgb(177, 214, 244);
         transition: 0.3s;
-
+        display: flex;
+        justify-content: end;
     }
     
     .anchorStyleDropDown:hover, .anchorStyleDropDown:active, .anchorStyleDropDown:focus {
